--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -36,7 +36,7 @@ authors="Warcar" #optional
 description='''
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.ope_ope_rework]] #optional
+[[dependencies.hito_hito_no_mi_nika]] #optional
     # the modid of the dependency
     modId="forge" #mandatory
     # Does this dependency have to exist - if not, ordering below must be specified
@@ -48,16 +48,16 @@ description='''
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
     side="BOTH"
 # Here's another dependency
-[[dependencies.ope_ope_rework]]
+[[dependencies.hito_hito_no_mi_nika]]
     modId="minecraft"
     mandatory=true
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
     versionRange="[1.16.5,1.17)"
     ordering="NONE"
     side="BOTH"
-[[dependencies.ope_ope_rework]]
+[[dependencies.hito_hito_no_mi_nika]]
     modId="mineminenomi"
     mandatory=true
-    versionRange="[0.10.0,)"
+    versionRange="[0.9.5,)"
     ordering="NONE"
     side="BOTH"
